# Out-Of-The-Box

./: '  Cargo.lock.orig  Cargo.toml  Cargo_BACKUP_1925.toml  Cargo_LOCAL_1925.toml  Cargo_REMOTE_1925.toml  TODO_gra.txt  ]
.VSCodeCounter/2023-02-18_11-37-12/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/gimp/: box_glue.xcf  glue.xcf  menu_background.xcf
assets/maps/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  bait.txt  buttons.txt  buttons2.txt  juhu.txt  klupsko.txt  kupcia.txt  labirynth.txt  players.txt  tenis.txt  test.txt  test2.txt  test3.txt  test4.txt  test5.txt  testxd.txt  turtles.txt  unfinished.txt  woda.txt  wszystko.txt  xd.txt  xd2.txt  (+1 more)
assets/saves/: map.txt
assets/textures/: box_atlas2.xcf  ice2.xcf  player_atlas.xcf  player_atlas2.xcf  tile2.xcf  wall_atlas2.xcf
maps/: 8.txt
src/: board.rs  components.rs  consts.rs  exit.rs  init_images.rs  labels.rs  main.rs  plugin.rs  resources.rs  state.rs  utils.rs
src/board/: mod.rs  tests.rs
src/game/: game_objects.rs  maps.rs  mod.rs  resources.rs  restart.rs  victory.rs
src/game/display/: background.rs  border.rs  floor.rs  glue.rs  level_background.rs  mod.rs  print_board.rs  render_2_5_d.rs  resources.rs  text.rs
src/game/movement/: animation.rs  button.rs  eat.rs  end_move.rs  events.rs  fall.rs  (+15 more)
src/menu/: level_editor.rs  level_select.rs  main_menu.rs  mod.rs  resources.rs  sprite_select.rs  utils.rs
src/tests/: mod.rs
(+45 files in other folders)
