[package]
name = "bevy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.8.4"
itertools = "0.11.0"
